# anomaly-detection

./: .env.example  .gitignore  .trivyignore  404.html  AGENTS.md  ALARMs.md  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  index.html  mkdocs.yml  sitemap.xml
.githooks/: pre-commit
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml  sast.yml  test.yml
architecture/: index.html
architecture/components/: index.html
architecture/data-flow/: index.html
architecture/decisions/: index.html
architecture/degradation-model/: index.html
configuration/: index.html
configuration/enrichment/: index.html
configuration/rules/: index.html
configuration/suppression/: index.html
controller/: .gitignore  Dockerfile  README.md  config.yaml  go.mod  go.sum
controller/deploy/: controller.yaml  dashboard.json  redis.yaml  vmrules.yaml  worker.yaml
controller/proto/: ml.pb.go  ml.proto  ml_grpc.pb.go  worker.pb.go  worker.proto  worker_grpc.pb.go
detection/: index.html
detection/adaptive/: index.html
detection/correlation/: index.html
detection/logs/: index.html
detection/ml/: index.html
detection/static/: index.html
development/: index.html
development/building/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: hypothesis-causal-origination.md  review-2026-07-04.md  roadmap.md  threat-model-and-limitations.md
docs/architecture/: decisions.md
docs/configuration/: index.md
docs/detection/: methodology.md
docs/development/: building.md  contributing.md  index.md  testing.md
docs/getting-started/: installation.md
docs/operations/: index.md  monitoring.md  replay.md
docs/site/: evaluation-scorecard.md  hypothesis-causal-origination.md  index.md  program-causal-correlation.md  roadmap.md  threat-model-and-limitations.md
evaluation-scorecard/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
helm-charts/anomaly-detection/: Chart.yaml  values-dev.yaml  values-hml.yaml  values-prd.yaml  values.yaml
hypothesis-causal-origination/: index.html
ml/: Dockerfile  README.md  pyproject.toml
ml/server/: forecaster.py  main.py  multivariate.py
ml/tests/: test_forecaster.py  test_multivariate.py  test_server.py
operations/: index.html
operations/monitoring/: index.html
operations/quickstart/: index.html
operations/replay/: index.html
operations/troubleshooting/: index.html
reference/alert-rules/: index.html
reference/helm/: index.html
reference/metrics/: index.html
roadmap/: index.html
scripts/: README.md  docker-compose.yaml  monitor-controller.sh  monitor-detail.sh  monitor-workers.sh  monitor.sh  start.sh  stop.sh
scripts/dev/: build-go.sh  doctor.sh  lib.sh  lint.sh  test-go.sh  test-ml.sh  verify.sh
scripts/observability/: loki-config.yaml  prometheus.yml  promtail-config.yaml
specs/: README.md
specs/agent-api-integration/: design.md  requirements.md  tasks.md
specs/agent-native-execution/: requirements.md  tasks.md
specs/baseline-robustness/: design.md  requirements.md  tasks.md
specs/cardinality-guard/: requirements.md  tasks.md
specs/ci-cd-pipeline/: design.md  requirements.md  tasks.md
specs/competitive-teardown/: design.md  experiment.md  requirements.md  tasks.md
specs/degradation-model-validation/: requirements.md  tasks.md
specs/detection-core/: design.md  requirements.md  tasks.md
specs/falco-integration/: design.md  requirements.md  tasks.md
specs/fdr-correction/: design.md  requirements.md  tasks.md
specs/feedback-loop/: design.md  requirements.md  tasks.md
specs/leader-election/: design.md  requirements.md  tasks.md
specs/ml-forecast/: design.md  requirements.md  tasks.md
specs/ml-maturity/: design.md  requirements.md  tasks.md
specs/multivariate-namespace/: design.md  requirements.md  tasks.md
specs/observability-hardening/: design.md  requirements.md  tasks.md
threat-model-and-limitations/: index.html
(+172 files in other folders)
