[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "staffops-anomaly-ml"
version = "0.2.0"
description = "ML service for anomaly detection (Prophet forecasting + Isolation Forest)"
requires-python = ">=3.11"
dependencies = [
    "grpcio==1.62.1",
    "grpcio-tools==1.62.1",
    "protobuf==4.25.3",
    "prophet==1.3.0",
    "scikit-learn==1.4.2",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "prometheus-client==0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-asyncio==0.23.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
