[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "staffops-anomaly-ml"
version = "0.2.0"
description = "ML service for anomaly detection (Prophet forecasting + Isolation Forest)"
requires-python = ">=3.11"
dependencies = [
    "grpcio==1.65.4",
    "grpcio-tools==1.62.1",
    "protobuf==4.25.3",
    "prophet==1.3.0",
    "scikit-learn==1.4.2",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "prometheus-client==0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-asyncio==0.23.6",
]

[tool.hatch.build.targets.wheel]
# The importable package lives in server/ (project name differs from package dir),
# so hatchling needs this explicitly or editable installs fail metadata generation.
packages = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
